Documentation/Argo-CD/Local_Setup/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
  - host: <host>
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        path: /argocd/(.*)
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.10
